# academics-core

./: .gitignore  README.md
api/: go.mod
api/structs/: country.go  subject.go  university.go
data/: .gitignore  README.md  academics.db  db.py  main.py  models.py  requirements.in  requirements.txt  run_docker.sh
data/raw/: CREDIT  QS_2023.csv  Times_2023.csv  __init__.py  country_names.py  mapping.py
sync/: go.mod  go.sum  main.go  sync.sh
sync/structs/: countries.go  db.go  document.go  helper.go
wasm/: Cargo.toml
