[package]
name = "academics-core"
version = "0.1.0"
authors = ["Zezhe Huang <zezhehh@outlook.com>"]
description = "Wasm for only-phd"
license = "MIT/Apache-2.0"
repository = "https://github.com/zezhehh/academics-core/wasm"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
